// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterfaceHeader snapshot byline 1`] = `
<header
  class="text-dark-aaaa font-medium antialiased font-galano text-xl"
>
  <div>
    Title
  </div>
  <div
    class="text-dark-aa font-normal font-arbeit text-md mt-2"
  >
    Byline
  </div>
</header>
`;

exports[`InterfaceHeader snapshot hierarchy mini 1`] = `
<header
  class="text-dark-aaaa font-medium antialiased text-sm"
>
  Ideal next opportunity
</header>
`;

exports[`InterfaceHeader snapshot hierarchy page 1`] = `
<header
  class="text-dark-aaaa font-medium antialiased font-galano text-xl"
>
  General Settings
</header>
`;

exports[`InterfaceHeader snapshot hierarchy section 1`] = `
<header
  class="text-dark-aaaa font-medium antialiased text-lg"
>
  Unbiased Sourcing
</header>
`;

exports[`InterfaceHeader snapshot hierarchy subsection 1`] = `
<header
  class="text-dark-aaaa font-medium antialiased text-md"
>
  Diversity
</header>
`;
